Ajout conformité légale RGPD + SEO + React Router
- Pages légales : Mentions légales, Politique de confidentialité, CGU
- Système de consentement cookies RGPD/CNIL (bannière + localStorage)
- Google Analytics conditionnel (uniquement si consentement)
- React Router pour multi-pages
- SEO : JSON-LD, Open Graph, Twitter Card, sitemap, robots.txt
- Checkbox consentement RGPD dans formulaire de contact
- Footer avec liens légaux et gestion cookies
- Informations société YOSSEF AVRAHAM CAPITAL
- URLs mises à jour vers clim-interieure.fr

--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <meta name="description" content="Climatisation Air-Eau discrète et 100% intérieure pour appartements parisiens. Sans unité extérieure, silencieuse et élégante." />
+    <meta name="keywords" content="climatisation paris, climatisation intérieure, air-eau, sans unité extérieure, climatisation appartement parisien, clim discrète, climatisation silencieuse, climatisation réversible" />
     <title>Clim'intérieure - Climatisation Air-Eau Discrète pour Paris</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.clim-interieure.fr/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.clim-interieure.fr/" />
+    <meta property="og:title" content="Clim'intérieure - Climatisation Air-Eau Discrète pour Paris" />
+    <meta property="og:description" content="Climatisation Air-Eau discrète et 100% intérieure pour appartements parisiens. Sans unité extérieure, silencieuse et élégante. À partir de 9 850€ HT." />
+    <meta property="og:image" content="https://www.clim-interieure.fr/og-image.jpg" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:site_name" content="Clim'intérieure" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.clim-interieure.fr/" />
+    <meta name="twitter:title" content="Clim'intérieure - Climatisation Air-Eau Discrète pour Paris" />
+    <meta name="twitter:description" content="Climatisation Air-Eau discrète et 100% intérieure pour appartements parisiens. Sans unité extérieure, silencieuse et élégante." />
+    <meta name="twitter:image" content="https://www.clim-interieure.fr/twitter-card.jpg" />
+
+    <!-- Geo Tags (SEO Local Paris) -->
+    <meta name="geo.region" content="FR-75" />
+    <meta name="geo.placename" content="Paris" />
+    <meta name="geo.position" content="48.8566;2.3522" />
+    <meta name="ICBM" content="48.8566, 2.3522" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
